fetch, render and display posts

--- a/index.html
+++ b/index.html
@@ -41,26 +41,27 @@
         </div>
       </nav>
     </header>
-    <main class="frontpage">
-      <section class="frontpage-section">
-        <h1>Your go-to bookish social platform</h1>
-        <p>Join our amazing community of readers and writers today!</p>
-        <div>
-          <a href="/account/register.html"
-            ><button class="btn">Register Now</button></a
-          >
-          <a href="/account/login.html"
-            ><button class="btn btn-secondary">Sign In</button>
-          </a>
+    <main>
+      <section class="frontpage" id="frontpage">
+        <div class="frontpage-section">
+          <h1>Your go-to bookish social platform</h1>
+          <p>Join our amazing community of readers and writers today!</p>
+          <div>
+            <a href="/account/register.html"
+              ><button class="btn">Register Now</button></a
+            >
+            <a href="/account/login.html"
+              ><button class="btn btn-secondary">Sign In</button>
+            </a>
+          </div>
         </div>
-      </section>
-      <section>
         <img
           src="https://images.unsplash.com/photo-1598024055266-e772a5f8c128?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3DSA"
           class="frontpage-image"
           alt="Person reading a book on a couch"
         />
       </section>
+      <section id="posts-container"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
