fetch, render, display profile

--- a/account/profile.html
+++ b/account/profile.html
@@ -47,10 +47,11 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section id="profile">
         <h1>Profile</h1>
         <button class="btn">.</button>
       </section>
+      <section id="posts-container"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
