--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
           alt="Person reading a book on a couch"
         />
       </section>
+      <section id="create-post" class="create-post">
+        <form id="create-post-form" class="create form" method="post">
+          <label for="title">Title</label>
+          <input
+            type="text"
+            name="title"
+            id="title"
+            placeholder="Enter post title"
+            required
+          />
+          <label for="content">Content</label>
+          <textarea
+            id="content"
+            maxlength="10000"
+            rows="10"
+            placeholder="Enter post content"
+            required
+          ></textarea>
+          <input type="submit" value="Create Post" class="button" />
+        </form>
+      </section>
       <section id="posts-container"></section>
     </main>
     <footer>
