--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           />
           <label for="content">Content</label>
           <textarea
-            id="content"
+            id="body"
+            name="body"
             maxlength="10000"
             rows="10"
             placeholder="Enter post content"
