view other users profile

--- a/account/user-profile.html
+++ b/account/user-profile.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="description" content="Profile" />
-    <title>My Profile</title>
+    <meta type="description" content="User profile" />
+    <title>User Profile</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/script.js" type="module" defer></script>
     <link
@@ -47,11 +47,7 @@
       </nav>
     </header>
     <main>
-      <section id="profile">
-        <h1>Profile</h1>
-        <button class="btn">.</button>
-      </section>
-      <section id="posts-container"></section>
+      <div id="user-profile-container"></div>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
