--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <input type="submit" value="Create Post" class="button" />
         </form>
       </section>
+      <section id="search-container" class="search-container">
+        <input type="text" id="search-input" placeholder="Search posts..." />
+      </section>
       <section id="posts-container"></section>
     </main>
     <footer>
