add loader to api call functions

--- a/account/profile.html
+++ b/account/profile.html
@@ -52,6 +52,7 @@
         <button class="btn">.</button>
       </section>
       <section id="posts-container"></section>
+      <section id="loader"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
