--- a/account/register.html
+++ b/account/register.html
@@ -87,6 +87,7 @@
           <a href="/account/login.html">Sign In</a>
         </div>
       </section>
+      <section id="loader"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
