--- a/account/user-profile.html
+++ b/account/user-profile.html
@@ -48,6 +48,7 @@
     </header>
     <main>
       <div id="user-profile-container"></div>
+      <section id="loader"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
