--- a/account/login.html
+++ b/account/login.html
@@ -77,6 +77,7 @@
           <a href="/account/register.html">Create account</a>
         </div>
       </section>
+      <section id="loader"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
