--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <input type="text" id="search-input" placeholder="Search posts..." />
       </section>
       <section id="posts-container"></section>
+      <section id="loader"></section>
     </main>
     <footer>
       <p>&copy; 2025 Stine Knutsen</p>
