style posts and apply button styles

--- a/account/profile.html
+++ b/account/profile.html
@@ -47,10 +47,7 @@
       </nav>
     </header>
     <main>
-      <section id="profile">
-        <h1>Profile</h1>
-        <button class="btn">.</button>
-      </section>
+      <section id="profile"></section>
       <section id="posts-container"></section>
       <section id="loader"></section>
     </main>
