--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="frontpage-main">
       <section class="frontpage" id="frontpage">
         <div class="frontpage-section">
           <h1>Your go-to bookish social platform</h1>
@@ -63,6 +63,7 @@
       </section>
       <section id="create-post" class="create-post">
         <form id="create-post-form" class="create form" method="post">
+          <h1>Create Post</h1>
           <label for="title">Title</label>
           <input
             type="text"
